Fixed Vert Spacing

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ a:hover {
 
 .skills-section h2 {
     font-size: 35px;
+    padding-top: 150px;
     text-align: center;
 }
 
